test/domains/neth/tupleScalar.good
tupleScalar.chpl:1: error: Domains defined using tuple bounds must use tuples, but got 'int(64)' and '1*int(64)'
